@@ -1,0 +1,33 @@
+#!/bin/sh
+
+# Check that double quotes (`"') are not improperly passed down in
+# ratfor output.
+
+. ./defs.sh || exit 99
+
+cat > tst.r <<EOF
+while (false)
+    zap()
+EOF
+cat tst.r
+
+run_RATFOR -e 0 tst.r || testcase_FAIL
+grep -v '^[cC]' stdout >stdout-t
+mv stdout-t stdout
+
+$FGREP 'goto' stdout  \
+ && $FGREP 'then' stdout \
+ && $FGREP 'endif' stdout \
+ || testcase_FAIL
+
+test `$FGREP 'then' stdout | wc -l` -eq 1 \
+ && test `$FGREP 'endif' stdout | wc -l` -eq 1 \
+ && test `$FGREP 'goto' stdout | wc -l` -eq 1 \
+ || testcase_FAIL
+
+test `$GREP '^ *[0-9]' stdout | $GREP -v '^ *2300[01] ' | wc -l` -eq 0 \
+  || testcase_FAIL 'Too many labels in generated fortran code'
+
+testcase_PASS
+
+# vim: ft=sh ts=4 sw=4 et
